test/moncler/kube2/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-moncler
  namespace: gsc-clients-automation
  labels:
    environment: gsc-clients-automation
    component: dep-moncler
spec:
  selector:
    environment: gsc-clients-automation
    component: dep-moncler
  ports:
    - name: default
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
